--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,10 +1,351 @@
-*{
-	outline: 1px red solid !important;
-}
-
-
-
-div {
-	height: 100px;
-	width: 100px;
-}
+body {
+	background-color: whitesmoke;
+  }
+  
+  header {
+	position: sticky;
+	left: 0;
+	top: -60px;
+	z-index: 30;
+  }
+  header .contact {
+	background-color: black;
+	background-size: cover;
+	background-position: center;
+	width: 100%;
+	height: auto;
+  }
+  header .contact .containers {
+	width: 90%;
+	color: white;
+	margin: auto;
+	font-size: 1em;
+	line-height: 60px;
+	letter-spacing: 3px;
+	position: relative;
+  }
+  header .contact .containers .spanicn {
+	display: inline-block;
+  }
+  header .contact .containers .searchspan {
+	display: inline-block;
+  }
+  header .contact .containers .searchspan .inputclose {
+	display: none;
+  }
+  header .contact .containers .searchspan .search {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	font-size: 1em;
+	padding: 13px 13px;
+	border-radius: 100%;
+	transition: all 0.7s;
+  }
+  header .contact .containers .searchspan .search:hover {
+	background-color: white;
+	border-radius: 100%;
+	color: darkgray;
+	transition: all 0.7s;
+  }
+  header .contact .containers .searchspan .searchinput {
+	border: transparent;
+	background-color: transparent;
+	outline: none;
+	color: white;
+	display: none;
+  }
+  header .contact .containers .searchspan .searchinput::placeholder {
+	color: white;
+  }
+  header .contact .containers .searchspan .inputclose:hover {
+	color: red;
+  }
+  header nav {
+	background-color: white;
+  }
+  header nav .navs {
+	width: 100%;
+	z-index: 30;
+  }
+  header nav .navs .logo {
+	padding-top: 0 !important;
+  }
+  header nav .navs .logo a {
+	display: inline-block;
+  }
+  header nav .navs .cont-nav {
+	width: 90%;
+	margin: auto;
+  }
+  header nav .navs .cont-nav .logo {
+	padding-top: 10px;
+  }
+  header nav .navs .cont-nav .navitems ul {
+	display: flex;
+	position: relative;
+	background-color: white;
+  }
+  header nav .navs .cont-nav .navitems ul .navbarUlLi {
+	list-style-type: none;
+  }
+  header nav .navs .cont-nav .navitems ul .navbarUlLi a {
+	padding: 20px;
+	display: inline-block;
+	text-decoration: none;
+	color: black;
+  }
+  header nav .navs .cont-nav .navitems ul .navbarUlLi a:hover {
+	color: darkgray;
+  }
+  header nav .navs .cont-nav .navitems ul .navbarUlLi .active {
+	color: darkgray;
+  }
+  header nav .navs .cont-nav .navitems ul .navbarUlLi .under {
+	display: none;
+	position: absolute;
+	width: 300px;
+	box-shadow: 0 0 10px black;
+  }
+  header nav .navs .cont-nav .navitems ul .navbarUlLi .under li {
+	list-style-type: none;
+	text-align: left;
+  }
+  header nav .navs .cont-nav .navitems ul .navbarUlLi .under li a {
+	padding: 10px !important;
+  }
+  header nav .navs .cont-nav .navitems ul .navbarUlLi .HomeUl {
+	width: 260px;
+  }
+  header nav .navs .cont-nav .navitems ul .navbarUlLi .CompanyUl {
+	width: 220px;
+  }
+  header nav .navs .cont-nav .navitems ul .navbarUlLi .ShopUl {
+	width: 200px;
+  }
+  header nav .navs .cont-nav .navitems ul .navbarUlLi .BlogUl {
+	width: 210px;
+  }
+  header nav .navs .cont-nav .navitems ul .navbarUlLi .ContactUl {
+	width: 190px;
+  }
+  header nav .navs .cont-nav .navitems ul .navbarUlLi:hover .under {
+	display: block;
+  }
+  header nav .navs .cont-nav .navitems ul .navbarUlLi:hover .under li:hover a {
+	color: darkgray;
+  }
+  header nav .navs .cont-nav .navitems .menuicn {
+	display: none;
+  }
+  header nav .navs .cont-nav .navicn a {
+	text-decoration: none;
+	color: black;
+	padding: 7px;
+	display: inline;
+	position: relative;
+  }
+  header nav .navs .cont-nav .navicn a i {
+	padding: 12px 12px;
+	border-radius: 100%;
+	transition: all 0.5s;
+	font-size: 1.5em;
+  }
+  header nav .navs .cont-nav .navicn a i:hover {
+	background-color: darkgray;
+	transition: all 0.5s;
+  }
+  header nav .navs .cont-nav .navicn .shareDiv {
+	position: absolute;
+	top: 10px;
+	z-index: -1;
+	width: 100%;
+	height: auto;
+	display: none;
+  }
+  header nav .navs .cont-nav .navicn .shareDiv i {
+	font-size: 1.5em;
+	padding-left: 5px;
+  }
+  header nav .navs .cont-nav .navicn .shareDiv i :hover {
+	background-color: transparent !important;
+  }
+  header nav .navs .cont-nav .navicn .face:hover {
+	color: #1111ba;
+  }
+  header nav .navs .cont-nav .navicn .twit:hover {
+	color: #3f84eb;
+  }
+  header nav .navs .cont-nav .navicn .insta:hover {
+	color: #88354f;
+  }
+  header .cancel {
+	position: absolute;
+	right: 0;
+	top: 0;
+	background-color: #161515;
+	color: white;
+	padding: 25px 25px;
+	font-size: 2.5em;
+	z-index: 1000;
+	display: none;
+  }
+  header .menulayout {
+	width: 100%;
+	height: 0;
+	background-color: black;
+	opacity: 1;
+	position: absolute;
+	top: 0;
+	left: 0;
+	transition: all 0.7s linear;
+	overflow: hidden;
+	z-index: 888;
+  }
+  header .menulayout .hoverNav {
+	padding-left: 0;
+  }
+  header .menulayout .hoverNav li {
+	list-style-type: none;
+	padding-left: 40px;
+  }
+  header .menulayout .hoverNav li a {
+	text-decoration: none;
+	color: lightgray;
+  }
+  header .menulayout .hoverNav li ul {
+	padding-left: 5px;
+  }
+  header .menulayout .hoverNav li ul li {
+	padding: 10% 3%;
+	width: 200%;
+  }
+  
+  .d-flex {
+	justify-content: center;
+  }
+  
+  @media screen and (max-width: 1024px) {
+	header .contact {
+	  display: none;
+	}
+	header .contact .containers {
+	  width: 90%;
+	  color: white;
+	  margin: auto;
+	  font-size: 1em;
+	  line-height: 60px;
+	  letter-spacing: 3px;
+	  position: relative;
+	}
+	header .contact .containers .spanicn {
+	  display: inline-block;
+	}
+	header .contact .containers .searchspan {
+	  display: inline-block;
+	}
+	header .contact .containers .searchspan .search {
+	  position: absolute;
+	  top: 50%;
+	  transform: translateY(-50%);
+	  font-size: 1em;
+	  padding: 13px 13px;
+	  border-radius: 100%;
+	  transition: all 0.7s;
+	}
+	header .contact .containers .searchspan .search:hover {
+	  background-color: white;
+	  border-radius: 100%;
+	  color: darkgray;
+	  transition: all 0.7s;
+	}
+	header nav .navs {
+	  width: 100%;
+	}
+	header nav .navs .cont-nav {
+	  width: 90%;
+	  margin: auto;
+	}
+	header nav .navs .cont-nav .logo {
+	  padding-top: 31px;
+	}
+	header nav .navs .cont-nav .navitems {
+	  position: relative;
+	}
+	header nav .navs .cont-nav .navitems ul {
+	  display: none;
+	}
+	header nav .navs .cont-nav .navitems ul li {
+	  list-style-type: none;
+	}
+	header nav .navs .cont-nav .navitems ul li a {
+	  padding: 30px;
+	  line-height: 80px;
+	  display: inline-block;
+	}
+	header nav .navs .cont-nav .navitems .menuicn {
+	  display: block;
+	  line-height: 80px;
+	  font-size: 3em;
+	  position: absolute;
+	  right: 0;
+	  color: black;
+	}
+	header nav .navs .cont-nav .navicn .shareDiv {
+	  width: 22%;
+	}
+  }
+  #footer {
+	margin: auto;
+	padding: 100px 0;
+  }
+  #footer .logo_img {
+	padding: 0;
+  }
+  #footer .logo ul {
+	padding: 0;
+	display: inline-block;
+  }
+  #footer .logo ul li {
+	font-family: 'Nunito Sans', sans-serif;
+	font-weight: 300;
+	line-height: 2.23em;
+	font-size: 18px;
+	color: #666666;
+	list-style-type: none;
+	padding-left: -5px;
+  }
+  #footer .logo ul h2 {
+	font-weight: 750;
+  }
+  #footer .logo ul .media-left {
+	margin-right: 15px;
+  }
+  #footer .logo .innerul {
+	padding-left: 7%;
+  }
+  
+  .copyright {
+	background-color: black;
+	height: 80px;
+  }
+  .copyright .text-center {
+	text-align: center;
+	color: white;
+	font-size: 16px;
+	letter-spacing: 0.2em;
+	line-height: 80px;
+  }
+  .copyright .text-center p {
+	margin-bottom: 0 !important;
+  }
+  
+  #loader {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background: url("file:///C:/Users/User/Desktop/Avangard/Avangardups/src//images/loader.gif") no-repeat center center;
+  }
+  
+  /*# sourceMappingURL=style.css.map */
+  
