--- a/src/css/style.css
+++ b/src/css/style.css
@@ -96,7 +96,8 @@ body {
 	color: black;
   }
   header nav .navs .cont-nav .navitems ul .navbarUlLi a:hover {
-	color: darkgray;
+	color: #FF6F00;
+
   }
   header nav .navs .cont-nav .navitems ul .navbarUlLi .active {
 	color: darkgray;
@@ -138,7 +139,7 @@ body {
   header nav .navs .cont-nav .navitems .menuicn {
 	display: none;
   }
-  header nav .navs .cont-nav .navicn a {
+/*  header nav .navs .cont-nav .navicn a {
 	text-decoration: none;
 	color: black;
 	padding: 7px;
@@ -178,7 +179,7 @@ body {
   }
   header nav .navs .cont-nav .navicn .insta:hover {
 	color: #88354f;
-  }
+  }*/
   header .cancel {
 	position: absolute;
 	right: 0;
@@ -186,7 +187,7 @@ body {
 	background-color: #161515;
 	color: white;
 	padding: 25px 25px;
-	font-size: 2.5em;
+	font-size: 2em;
 	z-index: 1000;
 	display: none;
   }
@@ -294,6 +295,39 @@ body {
 	header nav .navs .cont-nav .navicn .shareDiv {
 	  width: 22%;
 	}
+}
+ /*IMPORTANT!!!!!! DECIDE WHAT THE FUCK THIS } BITCH IS DOING THERE*/
+
+/*About section*/
+#aboutcontainer {
+	margin-top: 10px;
+}
+
+.borderdiv{
+	border: 1px solid #FF6F00;
+	
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   }
   #footer {
 	margin: auto;
@@ -341,6 +375,16 @@ body {
   }
   
 
-  
+  .navbarlogo {
+  	height: 60px;
+  	width: 230px;
+  	padding-top: 5px;
+  }
+/*this media query is for hiding the menu icon */
+ @media screen and (max-width: 640px) {
+ 	.fas fa-bars menuicn {
+ 		display: block;
+ 	}
+ }
   /*# sourceMappingURL=style.css.map */
   
