--- a/src/css/style.css
+++ b/src/css/style.css
@@ -77,18 +77,70 @@ body {
 	font-size: 2em;
 	z-index: 1000;
 	display: none;
+	}
+	.navbarlogo {
+  	height: 60px;
+  	width: 230px;
+  	padding-top: 5px;
   }
+	header{
+		position: sticky;
+		left: 0;
+		top: -60px;
+		box-shadow: 1px 3px 10px black;
+	}
+	nav{
+		padding: 0!important;
+	}
+	.productitm:hover .productDiv{
+		display: block;
+	}
+	
+	.navButtons li {
+		margin: 3px;
+	}
+		
+	.navbarIcons a i {
+		color: black;
+		font-size: 25px;
+		margin: 5px;
+	}
+	.navbarIcons a i:hover {
+		color: #323335;
+	}
+	.nav-link{
+		
+		padding-top: 0!important;
+		padding-bottom: 0!important;
+	}
+	.navbar-brand{
+		padding-top: 0!important;
+		padding-bottom: 0!important;
+	}
+/*DESIGNING BUTTONS*/
+.btnMine {
+	color: black!important;
+	background-color: white!important;
+	border:none!important;
+}
+
+.btnMine:hover {
+	background-color: orangered!important;
+	border:none!important;
+}
+.active{
+	background-color: orangered!important;
+	border:none!important;
+	border-radius: 5px;
+}
   
-  
-  .d-flex {
-	justify-content: center;
-  }
-  
+
+     
   @media screen and (max-width: 1024px) {
 	header .contact {
 	  display: none;
 	}
-	header .contact .containers {
+	/* header .contact .containers {
 	  width: 90%;
 	  color: white;
 	  margin: auto;
@@ -117,10 +169,47 @@ body {
 	  border-radius: 100%;
 	  color: darkgray;
 	  transition: all 0.7s;
-	}
+	} */
 	
 }
- /*IMPORTANT!!!!!! DECIDE WHAT THE FUCK THIS } BITCH IS DOING THERE*/
+ 
+/* Designing of slider starts here */
+
+
+
+.carousel-inner{
+	width: 100%;
+	height: 750px!important;
+	overflow: hidden!important;
+	object-fit: fill;
+	
+}
+@media (max-width:1024px){
+	.carousel-inner{
+		width: 100%;
+		height: 195px!important;
+		overflow: hidden!important;
+		object-fit: fill;
+		
+	}
+}
+
+
+
+
+/* Designing of slider ends here */
+
+/* designing preloader */
+#preloader{
+	position: fixed;
+	left: 50%;
+	top: 50%;
+	transform: translateY(-50%);
+	transform: translateX(-50%);
+}
+
+
+/*  */
 
 /*About section*/
 #main{
@@ -135,6 +224,21 @@ body {
 	/* transform: scale(1.0.5); */
 	
 }
+.borderDiv p{
+	font-size: 1.2em;
+}
+.secondPabout{
+	font-size: 1.4em!important;
+}
+@media(max-width:1024px){
+	.borderDiv p{
+		font-size: 0.8em;
+	}
+	.secondPabout{
+		font-size: 1.1em!important;
+	}
+}
+
 /* about section ends */
 
 /* projects section starts */
@@ -151,10 +255,12 @@ body {
 	padding: 0;
 	position: relative;
 	overflow: hidden;
+	background-color: white;
 }
 .projectImg{
 	width: 100%;
 	padding: 0;
+	height: 400px;
 	
 }
 .hoverImgDiv{
@@ -168,26 +274,58 @@ body {
 	overflow: hidden;
 }
 .projectImgDiv:hover .hoverImgDiv{
-	height: 429.66px;
+	height: 400px;
 	width: 100%;
 }
 /* .hoverImgDiv h5, */
-.hoverImgDiv h5,
-.hoverImgDiv  p{
+.hoverImgDiv h5{
 	color:white;
 	font-size: 2em;
 	text-align: center;
 	opacity: 0;
 	transition: all 3s;
-	line-height: 429.66px;
+	line-height: 400px;
 }
-/* .hoverImgDiv h5{
-	line-height: 429.66px;
-} */
 
-.projectImgDiv:hover .hoverImgDiv p,
+
+
+
 .projectImgDiv:hover .hoverImgDiv h5{
 	opacity: 1;
+}
+
+@media screen and (min-width:767px) and (max-width:1024px){
+	.projectImg{
+		width: 100%;
+		padding: 0;
+		height: 250px;
+		
+	}
+	.hoverImgDiv h5{
+		color:white;
+		font-size: 2em;
+		text-align: center;
+		opacity: 0;
+		transition: all 3s;
+		line-height: 220px;
+	}
+}
+
+@media(max-width:766px){
+	.projectImg{
+		width: 100%;
+		padding: 0;
+		height: auto;
+		
+	}
+	.hoverImgDiv h5{
+		color:white;
+		font-size: 2em;
+		text-align: center;
+		opacity: 0;
+		transition: all 3s;
+		line-height: 200px;
+	}
 }
 
 
@@ -206,6 +344,9 @@ body {
 	color:#babca7;
 
 }
+.avtotexnika{
+	font-size: 1.5em!important;
+}
 
 .serviceImg img {
 	padding-top: 5%;
@@ -218,7 +359,8 @@ body {
 	padding-top: 5%;
 }
 .mainCont{
-	padding: 0;
+	padding: 0!important;
+	margin: 0 !important;
 }
 .parallaxDiv{
 	width: 100%;
@@ -228,28 +370,40 @@ body {
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
+	margin: 0 !important;
 }
 .parallaxDivText{
 	color: white;
+	line-height: 400px;
 }
 .parallaxDivText h2{
-	font-size: 2.5em;
+  text-align: center!important;
+	line-height: 400px;
+	font-size: 1.5em;
 	font-weight: bold;
 	text-transform: uppercase;
+
+	
+	
 }
-.parallaxDivText p{
-	font-size: 1.2em;
-}
-.parallaxDivText a{
-	display: inline-block;
-	padding: 3%;
-	background-color: white;
-	color: black;
-	border-radius: 30px;
-	text-decoration: none;
-}
-.parallaxDivText a:hover{
-	background-color: whitesmoke;
+
+
+@media(max-width:1024px){
+	.parallaxDiv{
+		width: 100%;
+		background-image: url("https://demo.kaliumtheme.com/construction/wp-content/uploads/2017/09/banner-projects.jpg");
+		height: 250px;
+		background-attachment: fixed;
+		background-size: cover;
+		background-position: center;
+		background-repeat: no-repeat;
+	}
+	.parallaxDivText h2{
+		font-size: 1em;
+		padding-top: 5%;
+		line-height: 250px;
+	}
+	
 }
 /* parallax section ends here */
 
@@ -277,7 +431,18 @@ body {
 
 /* partner section ends here */
 
+.mapouter {
+	text-align: right;
+	height: 350px;
+	width: 100%;
+}
 
+.gmap_canvas {
+	overflow: hidden;
+	background: none !important;
+	height: 350px;
+	width: 100%;
+}
 
 
 
@@ -322,85 +487,12 @@ body {
 	text-align: center;
 	color: white;
 	font-size: 16px;
-	letter-spacing: 0.2em;
 	line-height: 80px;
   }
   .copyright .text-center p {
 	margin-bottom: 0 !important;
+	font-size: 0.9em;
   }
   
 
-  .navbarlogo {
-  	height: 60px;
-  	width: 230px;
-  	padding-top: 5px;
-  }
-/*this media query is for hiding the menu icon */
- @media screen and (max-width: 640px) {
- 	.fas fa-bars menuicn {
- 		display: block;
- 	}
- }
-  /*# sourceMappingURL=style.css.map */
-	
-	
-
-
-
-	header{
-		position: sticky;
-		left: 0;
-		top: -60px;
-		box-shadow: 1px 3px 10px black;
-	}
-	nav{
-		padding: 0!important;
-	}
-	.productitm:hover .productDiv{
-		display: block;
-	}
-	
-	.navButtons li {
-		margin: 3px;
-	}
-	
-	
-	@media screen and (max-width: 768px) {
-		header{
-			position: relative;
-		}
-	}
-	
-	.navbarIcons a i {
-		color: black;
-		font-size: 25px;
-		margin: 5px;
-	}
-	.navbarIcons a i:hover {
-		color: #323335;
-	}
-	.nav-link{
-		
-		padding-top: 0!important;
-		padding-bottom: 0!important;
-	}
-	.navbar-brand{
-		padding-top: 0!important;
-		padding-bottom: 0!important;
-	}
-	@media and screen (max-width: 768px){
-		.navbar-brand{
-			display: none;
-		}
-	}
-/*DESIGNING BUTTONS*/
-.btnMine {
-	color: black!important;
-	background-color: white!important;
-	border:none!important;
-}
-
-.btnMine:hover {
-	background-color: orange!important;
-	border:none!important;
-}
+  
